src/components/snapshots/systemctl_tui__components__home__tests__snapshots__action_menu_open.snap
---
source: src/components/home.rs
expression: terminal.backend()
---
"╭─Search (ctrl+f or /)──────────────────────────────────────────────────────────────────────── Press ? or F1 for help ─╮"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭─Services (1 hidden)────────╮╭─Details────────────────────────────────────────────────────────────────────────────────╮"
"│cron                        ││Description: cron.service description [?]                                               │"
"│docker                      ││     Active: active (running)                                                           │"
"│nginx                       ││ Enablement: enabled · global                                                           │"
"│bad-config                  ││  Unit file: /etc/systemd/system/cron.service                                           │"
"│backup.timer                │╰────────────────────────────────────────────────────────────────────────────────────────╯"
"│ssh                         │╭─Service Logs [newest first; ctrl+r to reverse]─────────────────────────────────────────╮"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                ╭Actions for cron.service╮                                              │"
"│                            ││                │ s Start                │                                              │"
"│                            ││                │ t Stop                 │                                              │"
"│                            ││                │ r Restart              │                                              │"
"│                            ││                │ l Reload               │                                              │"
"│                            ││                │ n Enable               │                                              │"
"│                            ││                │ d Disable              │                                              │"
"│                            ││                │ k Kill                 │                                              │"
"│                            ││                │ o Open logs in pager   │                                              │"
"│                            ││                │ c Copy unit file path  │                                              │"
"│                            ││                │ e Edit unit file       │                                              │"
"│                            ││                ╰────────────────────────╯                                              │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"╰────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────────╯"
"Execute action: <enter> | Close menu: <esc>                                                                       v0.6.1"
