src/components/snapshots/systemctl_tui__components__home__tests__snapshots__help_screen.snap
---
source: src/components/home.rs
expression: terminal.backend()
---
"╭─Search (ctrl+f or /)──────────────────────────────────────────────────────────────────────── Press ? or F1 for help ─╮"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭─Units (1 hidden)───────────╮╭─Details────────────────────────────────────────────────────────────────────────────────╮"
"│cron                        ││Description: cron.service description [?]                                               │"
"│docker                      ││     Active: active (running)                                                           │"
"│nginx                       ││ Enablement: enabled · global                                                           │"
"│bad-config                  ││  Unit file: /etc/systemd/system/cron.service                                           │"
"│[T] backup                  │╰────────────────────────────────────────────────────────────────────────────────────────╯"
"│ssh                         │╭─Logs — cron.service [newest first; ctrl+r to reverse]──────────────────────────────────╮"
"│                            ││    ╭─Help for systemctl-tui v0.6.1──────────────────╮                                  │"
"│                            ││    │                                                │                                  │"
"│                            ││    │Shortcuts                                       │                                  │"
"│                            ││    │                                                │                                  │"
"│                            ││    │ctrl+C or ctrl+Q to quit                        │                                  │"
"│                            ││    │ctrl+L toggles the logger pane                  │                                  │"
"│                            ││    │ctrl+R reverses the log order                   │                                  │"
"│                            ││    │PageUp / PageDown scroll the logs               │                                  │"
"│                            ││    │Home / End scroll to top/bottom                 │                                  │"
"│                            ││    │Enter or Space open the action menu             │                                  │"
"│                            ││    │f / F2 filter units                             │                                  │"
"│                            ││    │? / F1 open this help pane                      │                                  │"
"│                            ││    │mouse: drag to select+copy logs, wheel to scroll│                                  │"
"│                            ││    │                                                │                                  │"
"│                            ││    │Vim Style Shortcuts                             │                                  │"
"│                            ││    │                                                │                                  │"
"│                            ││    │j / k navigate down/up                          │                                  │"
"│                            ││    │g / G jump to first/last unit                   │                                  │"
"│                            ││    │ctrl+U / ctrl+D scroll the logs                 │                                  │"
"│                            ││    ╰────────────────────────────────────────────────╯                                  │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"╰────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────────╯"
"Close menu: <esc>                                                                                                 v0.6.1"
