src/components/snapshots/systemctl_tui__components__home__tests__snapshots__search_mode_with_query.snap
---
source: src/components/home.rs
assertion_line: 2768
expression: terminal.backend()
---
"╭─Search (ctrl+f or /)──────────────────────────────────────────────────────────────────────── Press ? or F1 for help ─╮"
"│ssh                                                                                                                   │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭─Units (1 hidden)───────────╮╭─Details────────────────────────────────────────────────────────────────────────────────╮"
"│ssh                         ││Description: ssh.service description [?]                                                │"
"│                            ││     Active: active (running)                                                           │"
"│                            ││ Enablement: enabled · global                                                           │"
"│                            ││  Unit file: /etc/systemd/system/ssh.service                                            │"
"│                            │╰────────────────────────────────────────────────────────────────────────────────────────╯"
"│                            │╭─Unit Logs [newest first; ctrl+r to reverse]────────────────────────────────────────────╮"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"╰────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────────╯"
"Actions: enter | Filter: F2 | Navigate: tab                                                                       v0.6.1"
