src/components/snapshots/systemctl_tui__components__home__tests__snapshots__services_list_120x40.snap
---
source: src/components/home.rs
expression: terminal.backend()
---
"╭─Search (ctrl+f or /)──────────────────────────────────────────────────────────────────────── Press ? or F1 for help ─╮"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭─Units (1 hidden)───────────╮╭─Details────────────────────────────────────────────────────────────────────────────────╮"
"│cron                        ││Description: cron.service description [?]                                               │"
"│docker                      ││     Active: active (running)                                                           │"
"│nginx                       ││ Enablement: enabled · global                                                           │"
"│bad-config                  ││  Unit file: /etc/systemd/system/cron.service                                           │"
"│[T] backup                  │╰────────────────────────────────────────────────────────────────────────────────────────╯"
"│ssh                         │╭─Logs — cron.service [newest first; ctrl+r to reverse]──────────────────────────────────╮"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"╰────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────────╯"
"Actions: enter | Filter: F2 | Navigate: tab                                                                       v0.6.1"
