src/components/snapshots/systemctl_tui__components__home__tests__snapshots__services_list_tiny_40x15.snap
---
source: src/components/home.rs
assertion_line: 2758
expression: terminal.backend()
---
"╭─Search (ctrl Press ? or F1 for help ─╮"
"│                                      │"
"╰──────────────────────────────────────╯"
"╭─Units (1 hidden)───────────╮╭─Details╮"
"│cron                        ││Descript│"
"│docker                      ││Active: │"
"│nginx                       ││Enableme│"
"│bad-config                  ││Unit fil│"
"│backup timer                │╰────────╯"
"│ssh                         │╭─Unit Lo╮"
"│                            ││        │"
"│                            ││        │"
"│                            ││        │"
"╰────────────────────────────╯╰────────╯"
"Actions: enter | Filter: F2 | Naviv0.6.1"
